@@ -166,6 +166,7 @@ public:
 
     void switchFocusTo(YFrameWindow *frame, bool reorderFocus = true);
     void switchFocusFrom(YFrameWindow *frame);
+    void notifyFocus(YFrameWindow *frame);
 
     void popupStartMenu();
 #ifdef CONFIG_WINMENU
