@@ -2,6 +2,7 @@
 	- fix problem with accented characters in the title bar
 	- fix aspect ratio on maximization
 	- gcc 3.3 build fixes
+	- added missing netwm active window notification
 
 1.2.8: 2003-06-08
 	- various build/minor fixes
